Use URIs instead of URLs in sets
Inspired by SonarQube rule violation.